--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@ textarea {
 html {
     font-size: 1em;
     line-height: 1.4;
-    font-family: helvetica;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .center{
@@ -46,10 +46,6 @@ html {
 /* ==========================================================================
    Globals
    ========================================================================== */
-   nav{
-      display: inline-block;
-      
-    }
    ul{
     list-style-type: none;
     padding: 0;
@@ -77,14 +73,21 @@ html {
   }
 }
 .nav{
+  position: fixed;
+  right: 50px;
+  top: 0;
   margin:{
     right: 200px;
     top: 60px;
   }
   color: $white;
   li{
-    display: inline-block;
-    padding-left: 60px;
+    display: block;
+    padding-bottom: 30px;
+      a{
+        color: #292e37;
+        text-decoration: none;
+      }
   }
 }
 .nav-item.active > a{
