responsive adjustments and addded viewport meta tag

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,1 @@
-@media only screen and (max-width: 768px){body{background-color:black}}
+@media only screen and (max-width: 768px){.hide{display:none}.section-header{top:100px}.purple{text-align:center}.purple .logo{margin-left:0}.teal{height:1050px}.grey{height:1350px}.white{height:950px}}
