--- a/sass/main.scss
+++ b/sass/main.scss
@@ -127,6 +127,7 @@ html {
 }
 
 .teal{
+  height: 710px;
   background-color: #17c2a4;
   color: $white;
   h1{
@@ -139,6 +140,7 @@ html {
 }
 
 .grey{
+  height: 850px;
   background-color: #e7f1f8;
   color: #3c4761;
   h1{
@@ -151,6 +153,7 @@ html {
 }
 
 .white{
+  height: 650px;
   color: #3c4761;
   h1{
      text-align: center;
