--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,5 +1,26 @@
+/*Tablet*/
 @media only screen and (max-width: 768px) {
-   body{
-   	background-color: black;
+   .hide{
+  display: none;
+}
+
+   .section-header{
+   		top: 100px;
    }
+   .purple{
+   	text-align: center;
+   		.logo{
+   			margin-left: 0;
+   		}
+   }
+   .teal{
+   		height: 1050px;
+   }
+   .grey{
+   		height: 1350px;
+   }
+   .white{
+   		height: 950px;
+   }
+
 }
